@@ -1,3 +1,10 @@
+2004-06-16 10:22  sisoft
+
+	* debian/copyright, src/mailer.h, src/perl.c, src/session.c,
+	  stuff/test.pl:
+
+	perl: fix compiling, implement end_session() hook.
+
 2004-06-16 07:42  sisoft
 
 	* Changes, INSTALL, qico.conf.sample, src/binkp.c, src/call.c,
